# MOSS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
Older Experiments/: .pre-commit-config.yaml
Older Experiments/.github/: PULL_REQUEST_TEMPLATE.md
Older Experiments/docs/: gen_ref_pages.py
Older Experiments/scrappy-proof-of-concept/: MOSS Description.md  README.md  config.py  main.py
Older Experiments/scripts/: README.md  ecosyst.ms-api.py
backend/: celery_app.py  main.py
backend/api/: __init__.py  deps.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/data/: __init__.py  database.py
backend/schemas/: __init__.py  requests.py  responses.py
backend/services/: __init__.py  base_service.py  discovery_chain_service.py  doi_processing_service.py  ingestion_service.py  keyword_discovery_service.py  scholarly_processing_service.py  surfacing_service.py
backend/tasks/: __init__.py  discovery_tasks.py  scholarly_tasks.py
backend/utils/: __init__.py  doi_utils.py  github_utils.py  recipe_executor.py  recipe_utils.py
contrib/affiliation_algorithms/: contributor_affiliation_match_v1.py  keyword_match_v1.py  readme_mention_v1.py
contrib/discovery_algorithms/: keyword_discovery_v1.py
contrib/queries/: citation_community_detection_v1.py  citing_work_subjects_v1.py  repo_health_v1.py  (+6 more)
frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json
scrappy-proof-of-concept/: README.md  config.py  main.py
scripts/: setup_db.py
(+174 files in other folders)
